# team_maker

./: .gitignore  =1.0  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: local_models.md
examples/: planner_example.yaml  smoke_test.yaml  software_delivery_request.yaml
langfuse/: docker-compose.yml
project-docs/: architecture.md  component-inventory.md  data-models.md  development-guide.md  epics.md  index.md  project-context.md  project-overview.md  project-scan-report.json  source-tree-analysis.md  vision-and-target-architecture.md
project-docs/stories/: 0-1-llm-provider-port-and-adapters.md  0-2-remove-provider-name-branching.md  0-3-crewai-behind-runtime-engine-port.md  1-1-load-keys-report-models.md  1-2-compose-team-spec.md  deferred-work.md  reconciliation-notes.md
scripts/: smoke_test.sh
team_maker/: __init__.py  __main__.py  cli.py  keyconfig.py
team_maker/adapters/: __init__.py
team_maker/artifacts/: __init__.py  writer.py
team_maker/codegen/: __init__.py  engine.py
team_maker/domain/: __init__.py  coding_agents_specs.txt  models.py
team_maker/frameworks/: __init__.py  autogen_adapter.py  base.py  crewai_adapter.py  langgraph_adapter.py
team_maker/generators/: __init__.py  agent.py  docs.py  report.py  routing.py  task.py
team_maker/llm/: __init__.py  mapper.py  model_resolver.py  planner.py  prompts.py  providers.py  schemas.py
team_maker/pipeline/: __init__.py  runner.py
team_maker/ports/: __init__.py  (+2 more)
tests/: conftest.py
to_run/: coinpela_crew_team_v4_3.yaml
(+65 files in other folders)
