[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "team_maker"
version = "0.1.0"
description = "A factory that generates standalone multi-agent team packages"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.5",
    "click>=8.1",
    "pyyaml>=6.0",
    "rich>=13.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
anthropic = [
    "anthropic>=0.40",
]
openai = [
    "openai>=1.0",
]
google = [
    "google-generativeai>=0.7",
]
llm = [
    "anthropic>=0.40",
    "openai>=1.0",
    "google-generativeai>=0.7",
]
vector = [
    "chromadb>=0.5",
]
all = [
    "anthropic>=0.40",
    "openai>=1.0",
    "google-generativeai>=0.7",
    "chromadb>=0.5",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "anthropic>=0.40",
    "openai>=1.0",
]

[project.scripts]
team-maker = "team_maker.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["team_maker*"]

[tool.setuptools.package-data]
"team_maker.codegen" = ["templates/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.coverage.run]
source = ["team_maker"]
omit = ["tests/*"]
